# paper-toolkit-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  README_zh.md  harness.md  papers.db  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml  publish.yml
.harness/constraints/: contracts.md
.harness/constraints/security/: bandit.yaml
.harness/specs/: requirements.md
.harness/specs/architecture/: boundaries.md  overview.md
.trae/specs/add-manuscript-processing/: checklist.md  spec.md  tasks.md
.trae/specs/download-csl-files/: checklist.md  spec.md  tasks.md
claude-code/: SKILL.md
paper_toolkit_mcp/: _helpers.py  cache.py  cli.py  config.py  pandoc_helper.py  paper.py  reference.py  server.py  storage.py  verifier.py
paper_toolkit_mcp/academic_platforms/: acm.py  arxiv.py  base.py  base_search.py  biorxiv.py  chemrxiv.py  citeseerx.py  core.py  crossref.py  dblp.py  doaj.py  europepmc.py  google_scholar.py  hal.py  iacr.py  ieee.py  medrxiv.py  oaipmh.py  openaire.py  openalex.py  pmc.py  pubmed.py  sci_hub.py  semantic.py  ssrn.py  unpaywall.py  zenodo.py
paper_toolkit_mcp/harness_templates/: CLAUDE.md  Harness.md  checklist.md  rules.md  verify.py
paper_toolkit_mcp/harness_templates/checks/: __init__.py  citations.py  data.py  language.py  structure.py
paper_toolkit_mcp/harness_templates/specs/: manuscript-spec.yaml
paper_toolkit_mcp/tools/: __init__.py  download.py  harness.py  library.py  manuscript.py  search.py  verify.py
tests/: e2e_test.py  functional_test.py  test.pubmed.py  test_acm.py  test_arxiv.py  test_base.py  test_biorxiv.py  test_cache.py  test_citeseerx.py  test_crossref.py  test_dblp.py  test_doaj.py  test_fallback.py  test_google_scholar.py  test_hal.py  test_iacr.py  test_ieee.py  test_medrxiv.py  test_openaire.py  test_pandoc_helper.py  test_reference.py  test_sci_hub.py  test_semantic.py  test_server.py  test_ssrn.py  test_unpaywall.py  test_zenodo.py
tests/integration/: conftest.py  test_arxiv.py  test_base.py  test_biorxiv.py  test_citeseerx.py  test_crossref.py  test_dblp.py  test_doaj.py  test_e2e.py  test_functional.py  test_google_scholar.py  test_hal.py  test_iacr.py  test_live_fetch.py  test_medrxiv.py  test_openaire.py  test_pandoc_helper.py  test_pubmed.py  test_sci_hub.py  test_semantic.py  test_server.py  test_zenodo.py
tests/unit/: test_acm.py  test_cache.py  test_config_env.py  test_fallback.py  test_ieee.py  test_manuscript_tools.py  test_paper_normalize.py  test_reference.py  test_server_helpers.py  test_server_sources.py  test_ssrn.py  test_storage.py  test_unpaywall.py  test_unpaywall_source.py  test_verifier.py
