[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-toolkit-mcp"
version = "0.2.0"
authors = [{ name = "YNLO", email = "czwziy@ynlo.top" }]
description = "A MCP toolkit for paper searching, manuscript processing, and academic research workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [
    "mcp",
    "academic",
    "papers",
    "research",
    "literature",
    "search",
    "arxiv",
    "pubmed",
    "semantic-scholar",
    "citation",
    "bibliometrics",
    "scholar",
    "toolkit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests",
    "feedparser",
    "fastmcp",
    "pypdf",
    "mcp[cli]>=1.6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx[socks]>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/czwziy/paper-toolkit-mcp"
Repository = "https://github.com/czwziy/paper-toolkit-mcp"
Issues = "https://github.com/czwziy/paper-toolkit-mcp/issues"

[project.scripts]
paper-toolkit-mcp = "paper_toolkit_mcp.server:main"
paper-toolkit = "paper_toolkit_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["paper_toolkit_mcp"]
